--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "tsnd src/index.ts",
+    "test": "yarn test:lint && yarn test:types && yarn test:unit",
     "test:lint": "eslint --ext .js,.ts ./src",
     "test:types": "tsc --noEmit",
     "test:unit": "jest"
   },
   "devDependencies": {
-    "@types/dotenv-safe": "^8.1.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
+    "jest": "^28.1.0",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.4"
   }
 }
