--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,16 @@
 src
 test
-tsconfig.json
-tsconfig.module.json
-tslint.json
+tsconfig.*
+*.tsbuildinfo
 .travis.yml
 .github
 .prettierignore
 .vscode
-build/docs
+.idea/*
 **/*.spec.*
 coverage
 .nyc_output
 *.log
+node_modules
+lib
+.env
