--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@fridgefm/your-project",
   "version": "0.1.0",
   "description": "",
-  "main": "build/index.js",
-  "typings": "build/index.d.ts",
-  "module": "build/index.js",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "module": "lib/index.js",
   "license": "MIT",
   "keywords": [],
   "scripts": {
