--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
   "name": "@fridgefm/your-project",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "A simple template for a library with built-in ts, jest, eslint, prettier support",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "module": "lib/index.js",
   "license": "MIT",
+  "type": "module",
   "keywords": [],
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
     "start": "tsnd src/index.ts",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "yarn test:lint && yarn test:types && yarn test:unit",
     "test:lint": "eslint --ext .js,.ts ./src",
     "test:types": "tsc --noEmit",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.2",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
-    "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
+    "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
