--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "keywords": [],
   "scripts": {
-    "start": "tsnd src/index.ts",
+    "start": "tsx watch ./src/",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "test": "yarn test:lint && yarn test:types && yarn test:unit",
@@ -31,7 +31,7 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.3",
     "ts-jest": "^29.0.5",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
 }
