--- a/.github/workflows/push-or-pr.yml
+++ b/.github/workflows/push-or-pr.yml
@@ -21,14 +21,14 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
-        cache: 'yarn'
+        cache: 'npm'
     - name: Install deps
-      run: yarn install
+      run: npm install
     - name: Building packages
-      run: yarn build
+      run: npm run build
     - name: Unit testing
-      run: yarn test:unit
+      run: npm run test:unit
     - name: ESLint
-      run: yarn test:lint
+      run: npm run test:lint
     - name: Type checking
-      run: yarn test:types
+      run: npm run test:types
