--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "tsx watch ./src/",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "yarn test:lint && yarn test:types && yarn test:unit",
+    "test": "npm run test:lint && npm run test:types && npm run test:unit",
     "test:lint": "eslint --ext .js,.ts ./src",
     "test:types": "tsc --noEmit",
     "test:unit": "jest",
