--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,16 +8,30 @@
     "declaration": true,
     "inlineSourceMap": true,
     "esModuleInterop": true,
-    "strict": true,
 
-    /* Additional Checks */
+    /* Strict Options */
+    "strict": true,
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+
+    /* Additional Restrictions */
+    "allowUnusedLabels": false,
+    "allowUnreachableCode": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "importsNotUsedAsValues": "error",
     "noUncheckedIndexedAccess": true,
     "useUnknownInCatchVariables": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "exactOptionalPropertyTypes": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitOverride": true,
 
     /* Debugging Options */
     "traceResolution": false,
