--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,53 +1,56 @@
 {
+  /* Visit https://aka.ms/tsconfig to read more about this file */
   "compilerOptions": {
-    "target": "es2017",
-    "outDir": "lib",
-    "rootDir": "src",
-    "moduleResolution": "node",
-    "module": "esnext",
-    "declaration": true,
-    "inlineSourceMap": true,
-    "esModuleInterop": true,
+    /* Language and Environment */
+    "target": "es2017", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "lib": ["es2020"], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "experimentalDecorators": true, /* Enable experimental support for legacy experimental decorators. */
+    "emitDecoratorMetadata": true, /* Emit design-type metadata for decorated declarations in source files. */
+    "moduleDetection": "auto", /* Control what method is used to detect module-format JS files. */
 
-    /* Strict Options */
-    "strict": true,
-    "alwaysStrict": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
+    /* Modules */
+    "module": "commonjs", /* Specify what module code is generated. */
+    "rootDir": "src", /* Specify the root folder within your source files. */
+    "moduleResolution": "node10", /* Specify how TypeScript looks up a file from a given module specifier. */
+    "typeRoots": ["node_modules/@types", "src/types"], /* Specify multiple folders that act like './node_modules/@types'. */
+    "resolveJsonModule": true, /* Enable importing .json files. */
 
-    /* Additional Restrictions */
-    "allowUnusedLabels": false,
-    "allowUnreachableCode": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "useUnknownInCatchVariables": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "exactOptionalPropertyTypes": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitOverride": true,
+    /* Emit */
+    "declaration": true, /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
+    "inlineSourceMap": true, /* Include sourcemap files inside the emitted JavaScript. */
+    "outDir": "lib", /* Specify an output folder for all emitted files. */
+    "importsNotUsedAsValues": "remove", /* Specify emit/checking behavior for imports that are only used for types. */
+    "stripInternal": true, /* Disable emitting declarations that have '@internal' in their JSDoc comments. */
+    "noEmitOnError": true, /* Disable emitting files if any type checking errors are reported. */
 
-    /* Debugging Options */
-    "traceResolution": false,
-    "listEmittedFiles": false,
-    "listFiles": false,
-    "pretty": true,
+    /* Interop Constraints */
+    "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
 
-    /* Experimental Options */
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "incremental": true,
+    /* Type Checking */
+    "strict": true, /* Enable all strict type-checking options. */                           
+    "noImplicitAny": true, /* Enable error reporting for expressions and declarations with an implied 'any' type. */
+    "strictNullChecks": true, /* When type checking, take into account 'null' and 'undefined'. */
+    "strictFunctionTypes": true, /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
+    "strictBindCallApply": true, /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
+    "strictPropertyInitialization": true, /* Check for class properties that are declared but not set in the constructor. */
+    "noImplicitThis": true, /* Enable error reporting when 'this' is given the type 'any'. */
+    "useUnknownInCatchVariables": true, /* Default catch clause variables as 'unknown' instead of 'any'. */
+    "alwaysStrict": true, /* Ensure 'use strict' is always emitted. */
+    "noUnusedLocals": true, /* Enable error reporting when local variables aren't read. */
+    "noUnusedParameters": true, /* Raise an error when a function parameter isn't read. */
+    "exactOptionalPropertyTypes": true, /* Interpret optional property types as written, rather than adding 'undefined'. */
+    "noImplicitReturns": true, /* Enable error reporting for codepaths that do not explicitly return in a function. */
+    "noFallthroughCasesInSwitch": true, /* Enable error reporting for fallthrough cases in switch statements. */
+    "noUncheckedIndexedAccess": true, /* Add 'undefined' to a type when accessed using an index. */
+    "noImplicitOverride": true, /* Ensure overriding members in derived classes are marked with an override modifier. */
+    "noPropertyAccessFromIndexSignature": true, /* Enforces using indexed accessors for keys declared using an indexed type. */
+    "allowUnusedLabels": false, /* Disable error reporting for unused labels. */
+    "allowUnreachableCode": false, /* Disable error reporting for unreachable code. */
 
-    "lib": ["es2020"],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    /* Completeness */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules/**", "**/__tests__/"],
-  "compileOnSave": false
+  "exclude": ["node_modules/**", "**/__tests__/"]
 }
