--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,12 @@
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/**", "**/__tests__/"]
+  "include": [
+    "**/*.ts",
+    "**/*.js"
+  ],
+  "exclude": [
+    "node_modules/**",
+    "**/__tests__/"
+  ]
 }
