Add linter rules (#5)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,15 @@
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/**", "**/__tests__/"]
+  "ts-node": {
+    "moduleTypes": {
+      "jest.config.ts": "cjs"
+    }
+  },
+  "include": [
+    "src/**/*.ts",
+  ],
+  "exclude": [
+    "**/__tests__/"
+  ]
 }
