--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+
   /* Visit https://aka.ms/tsconfig to read more about this file */
   "compilerOptions": {
     /* Language and Environment */
