--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   }
