--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@fridgefm/your-project",
-  "version": "0.0.1",
+  "name": "@fridgefm/node-ts-boiler",
+  "version": "0.0.0-stub",
   "description": "A simple template for a library with built-in ts, jest, eslint, prettier support",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "module": "lib/index.js",
   "type": "module",
   "license": "MIT",
-  "keywords": [],
+  "keywords": ["boilerplate", "template", "node"],
   "scripts": {
     "start": "tsx watch ./src/",
-    "build": "tsc",
+    "build": "tsc --listEmittedFiles",
     "build:watch": "tsc --watch",
     "test": "npm run test:lint && npm run test:types && npm run test:unit",
     "test:lint": "eslint -c .eslintrc.cjs",
@@ -19,20 +19,19 @@
     "test:unit:watch": "jest --watch"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prettier": "^3.1.1",
-    "ts-jest": "^29.1.1",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
+    "tsx": "^4.10.3",
+    "typescript": "^5.4.5"
   }
 }
