--- a/package.json
+++ b/package.json
@@ -7,31 +7,38 @@
   "module": "lib/index.js",
   "type": "module",
   "license": "MIT",
-  "keywords": ["boilerplate", "template", "node"],
+  "keywords": [
+    "boilerplate",
+    "template",
+    "node"
+  ],
   "scripts": {
     "start": "tsx watch ./src/",
     "build": "tsc --listEmittedFiles",
     "build:watch": "tsc --watch",
     "test": "npm run test:lint && npm run test:types && npm run test:unit",
-    "test:lint": "eslint -c .eslintrc.cjs",
+    "test:lint": "eslint -c ./eslint.config.mjs",
     "test:types": "tsc --noEmit",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.10.3",
-    "typescript": "^5.4.5"
+    "@eslint/js": "9.17.0",
+    "@types/jest": "29.5.12",
+    "@types/node": "22.10.2",
+    "@typescript-eslint/eslint-plugin": "8.18.1",
+    "@typescript-eslint/parser": "8.18.1",
+    "eslint": "9.17.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "globals": "15.14.0",
+    "jest": "29.7.0",
+    "prettier": "3.4.2",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "tsx": "4.19.2",
+    "typescript": "5.7.2",
+    "typescript-eslint": "8.18.1"
   }
 }
